--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pocketBartender",
+  "name": "pocketbartender",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -23,11 +23,23 @@
     "expo": "^23.0.4",
     "react": "16.0.0",
     "react-native": "0.50.3",
-    "react-native-fontawesome": "^5.7.0"
+    "react-native-fontawesome": "^5.7.0",
+    "react-navigation": "^1.0.0-beta.27"
   },
   "rnpm": {
     "assets": [
       "./assets/fonts/"
     ]
-  }
+  },
+  "description": "final project app for Mobile Computing Applications (MCA) at St. Olaf Interim 2018",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Eldjotnar/peckish.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Eldjotnar/peckish/issues"
+  },
+  "homepage": "https://github.com/Eldjotnar/peckish#readme"
 }
