--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "^23.0.4",
     "react": "16.0.0",
     "react-native": "0.50.3",
+    "react-native-drawer": "^2.5.0",
     "react-native-fontawesome": "^5.7.0",
     "react-navigation": "^1.0.0-beta.27"
   },
